--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
             <div class="size-categories">
                 <h3>Small Sizes (Wallet/Compact)</h3>
                 <div class="size-options">
-                    <button data-size="2x2">2×2" Square</button>
-                    <button data-size="2.5x3.5-p">2.5×3.5" Portrait</button>
-                    <button data-size="2.5x3.5-l">2.5×3.5" Landscape</button>
-                    <button data-size="3.5x5-p">3.5×5" Portrait</button>
-                    <button data-size="3.5x5-l">3.5×5" Landscape</button>
+                    <button data-size="51x51">51×51mm Square</button>
+                    <button data-size="64x89-p">64×89mm Portrait</button>
+                    <button data-size="89x64-l">89×64mm Landscape</button>
+                    <button data-size="89x127-p">89×127mm Portrait</button>
+                    <button data-size="127x89-l">127×89mm Landscape</button>
                 </div>
                 
                 <h3>Common Sizes</h3>
                 <div class="size-options">
-                    <button data-size="4x6-p">4×6" Portrait</button>
-                    <button data-size="4x6-l">4×6" Landscape</button>
-                    <button data-size="5x7-p">5×7" Portrait</button>
-                    <button data-size="5x7-l">5×7" Landscape</button>
-                    <button data-size="6x8-p">6×8" Portrait</button>
-                    <button data-size="6x8-l">6×8" Landscape</button>
+                    <button data-size="102x152-p">102×152mm Portrait</button>
+                    <button data-size="152x102-l">152×102mm Landscape</button>
+                    <button data-size="127x178-p">127×178mm Portrait</button>
+                    <button data-size="178x127-l">178×127mm Landscape</button>
+                    <button data-size="152x203-p">152×203mm Portrait</button>
+                    <button data-size="203x152-l">203×152mm Landscape</button>
                 </div>
                 
                 <h3>Large Sizes</h3>
                 <div class="size-options">
-                    <button data-size="8x10-p">8×10" Portrait</button>
-                    <button data-size="8x10-l">8×10" Landscape</button>
+                    <button data-size="203x254-p">203×254mm Portrait</button>
+                    <button data-size="254x203-l">254×203mm Landscape</button>
                 </div>
             </div>
         </div>
