print preview still broken

--- a/index.html
+++ b/index.html
@@ -109,5 +109,7 @@
 
     <script src="command.js"></script>
     <script src="renderer.js"></script>
+    <link rel="stylesheet" href="printing.css">
+    <script src="printing.js"></script>
 </body>
 </html> 
