printer dialog created

--- a/index.html
+++ b/index.html
@@ -109,5 +109,8 @@
 
     <script src="command.js"></script>
     <script src="renderer.js"></script>
+    <link rel="stylesheet" href="printing.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="printing.js"></script>
 </body>
 </html> 
