edit size works

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="toolbar">
         <div class="toolbar-left">
             <button id="addPage" class="toolbar-btn">+ Add Page</button>
+            <button id="editSize" class="toolbar-btn">Edit Size</button>
             <button id="saveLayout" class="toolbar-btn">Save</button>
             <button id="loadLayout" class="toolbar-btn">Load</button>
             <button id="exportPDF" class="toolbar-btn">Export PDF</button>
