the x closes the modal

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <!-- Photo Size Selection Modal -->
     <div id="sizeModal" class="modal">
         <div class="modal-content size-selection-content">
-            <h2>Select Photo Size</h2>
+            <div class="modal-header">
+                <h2>Select Photo Size</h2>
+                <button id="closeSizeModal" class="close-btn">&times;</button>
+            </div>
             <div class="size-categories">
                 <h3>Small Sizes (Wallet/Compact)</h3>
                 <div class="size-options">
