PDF exporting is working

--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
     </div>
 
     <script src="command.js"></script>
+    <script src="node_modules/jspdf/dist/jspdf.umd.min.js"></script>
+    <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="renderer.js"></script>
     <link rel="stylesheet" href="printing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
