got print preview working

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Photo Layout Editor</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="printing.css">
+    <link rel="stylesheet" href="printPreview.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="toolbar">
@@ -142,8 +145,7 @@
     <script src="node_modules/jspdf/dist/jspdf.umd.min.js"></script>
     <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="renderer.js"></script>
-    <link rel="stylesheet" href="printing.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="printPreview.js"></script>
     <script src="printing.js"></script>
 </body>
 </html> 
