--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <div class="toolbar">
         <div class="toolbar-left">
+            <button id="resetProject" class="toolbar-btn reset-btn">
+                <img src="asset/reset.svg" alt="Reset" style="width: 16px; height: 16px; margin-right: 4px;">
+                Reset
+            </button>
             <button id="addPage" class="toolbar-btn">+ Add Page</button>
             <button id="editSize" class="toolbar-btn">Edit Size</button>
             <button id="saveLayout" class="toolbar-btn">Save</button>
