--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Photo Layout Editor</title>
+    <title>ScoBro-Prints</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="printing.css">
     <link rel="stylesheet" href="printPreview.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    <div class="app-header">
+        <img src="asset/scoBroPrints.svg" alt="ScoBro Prints Logo" class="app-logo">
+    </div>
+
     <div class="toolbar">
         <div class="toolbar-left">
             <button id="addPage" class="toolbar-btn">+ Add Page</button>
