--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>ScoBro-Prints</title>
+    <link rel="icon" type="image/x-icon" href="asset/scoBroPrints.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="printing.css">
     <link rel="stylesheet" href="printPreview.css">
