layout state created

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
     <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="node_modules/jspdf/dist/jspdf.umd.min.js"></script>
     <script src="command.js"></script>
-    <script src="renderer.js"></script>
+    <script type="module" src="layoutRenderer.js"></script>
+    <script type="module" src="renderer.js"></script>
     <script src="printPreview.js"></script>
     <script src="printing.js"></script>
 </body>
