--- a/index.html
+++ b/index.html
@@ -143,6 +143,16 @@
         </div>
     </div>
 
+        <!-- Print Preview Modal -->
+    <div id="printPreviewModal" class="modal">
+        <div class="modal-content">
+            <h2>Print Preview</h2>
+            <div id="printPreviewContent"></div>
+            <button id="confirmPrint">Print</button>
+            <button id="cancelPrint">Cancel</button>
+        </div>
+    </div>
+
     <!-- Print Preview Modal -->
     <div id="printPreviewModal" class="modal">
         <div class="modal-content">
