--- a/update.html
+++ b/update.html
@@ -71,11 +71,40 @@
         background: #3498db;
         color: white;
       }
+
+      .progress {
+        --progress: 0%;
+        width: 100%;
+        max-width: 300px;
+        height: 20px;
+        background-color: #f3f3f3;
+        border-radius: 10px;
+        overflow: hidden;
+        margin: 10px 0;
+        position: relative;
+      }
+
+      .progress::before {
+        content: attr(data-progress);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: var(--progress);
+        height: 100%;
+        background-color: #3498db;
+        transition: width 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 12px;
+      }
     </style>
   </head>
   <body>
     <div class="loader"></div>
     <div class="update-message">Checking for updates...</div>
+    <div class="progress hidden" data-progress="0%"></div>
     <div class="buttons hidden">
       <button class="update-btn">Update Now</button>
       <button class="skip-btn">Continue Without Update</button>
