--- a/update.html
+++ b/update.html
@@ -1,115 +1,84 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Checking for Updates</title>
+    <title>Update Available</title>
     <style>
       body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 20px;
-        background: #f5f5f5;
+        background-color: #f5f5f5;
+        user-select: none;
+      }
+      .titlebar {
+        -webkit-app-region: drag;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 32px;
+        background: #2c3e50;
         display: flex;
-        flex-direction: column;
         align-items: center;
-        justify-content: center;
-        height: 100vh;
-        color: #333;
+        padding: 0 10px;
+        color: white;
       }
-
-      .loader {
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid #3498db;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 1s linear infinite;
-        margin-bottom: 20px;
+      .content {
+        margin-top: 32px;
+        padding: 20px;
       }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
+      #updateStatus {
+        margin-bottom: 15px;
       }
-
-      .update-message {
-        margin-bottom: 20px;
-        text-align: center;
+      #progressBar {
+        width: 100%;
+        height: 20px;
+        background-color: #f0f0f0;
+        border-radius: 10px;
+        overflow: hidden;
+        margin-bottom: 15px;
       }
-
-      .buttons {
-        display: flex;
-        gap: 10px;
+      #progressFill {
+        width: 0%;
+        height: 100%;
+        background-color: #3498db;
+        transition: width 0.3s ease;
       }
-
       button {
         padding: 8px 16px;
         border: none;
         border-radius: 4px;
         cursor: pointer;
-        font-size: 14px;
-      }
-
-      .update-btn {
-        background: #2ecc71;
-        color: white;
-      }
-
-      .skip-btn {
-        background: #e74c3c;
-        color: white;
-      }
-
-      .hidden {
-        display: none;
-      }
-
-      .ok-btn {
-        background: #3498db;
-        color: white;
-      }
-
-      .progress {
-        --progress: 0%;
-        width: 100%;
-        max-width: 300px;
-        height: 20px;
-        background-color: #f3f3f3;
-        border-radius: 10px;
-        overflow: hidden;
-        margin: 10px 0;
-        position: relative;
-      }
-
-      .progress::before {
-        content: attr(data-progress);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: var(--progress);
-        height: 100%;
+        margin-right: 10px;
         background-color: #3498db;
-        transition: width 0.3s ease;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         color: white;
-        font-size: 12px;
+        transition: all 0.3s ease;
+      }
+      button:disabled {
+        background-color: #bdc3c7;
+        cursor: not-allowed;
+        opacity: 0.7;
+      }
+      button:hover:not(:disabled) {
+        background-color: #2980b9;
+      }
+      .error {
+        color: #e74c3c;
+        margin-top: 10px;
       }
     </style>
   </head>
   <body>
-    <div class="loader"></div>
-    <div class="update-message">Checking for updates...</div>
-    <div class="progress hidden" data-progress="0%"></div>
-    <div class="buttons hidden">
-      <button class="update-btn">Update Now</button>
-      <button class="skip-btn">Continue Without Update</button>
+    <div class="titlebar">Update Available</div>
+    <div class="content">
+      <div id="updateStatus">Checking for updates...</div>
+      <div id="progressBar">
+        <div id="progressFill"></div>
+      </div>
+      <button id="installButton" style="display: none">Install Update</button>
+      <button id="closeButton">Close</button>
+      <div id="error" class="error"></div>
     </div>
-    <button class="ok-btn hidden">OK</button>
     <script src="update.js"></script>
   </body>
 </html>
