manual check working

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           text-align: center;
         "
       ></div>
+      <button id="manualUpdateCheck" class="toolbar-btn">Check for Updates</button>
     </div>
 
     <div class="toolbar">
