--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           text-align: center;
         "
       ></div>
-      <button id="manualUpdateCheck" class="toolbar-btn">Check for Updates</button>
+      <div>
+        <button id="manualUpdateCheck" class="manual-update-check-btn">Check for Updates</button>
+      </div>      
     </div>
 
     <div class="toolbar">
